; ModuleID = '/home/carl/AnghaBench/linux/drivers/power/supply/extr_ab8500_charger.c_ab8500_charger_usbchargernotokr_handler.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/power/supply/extr_ab8500_charger.c_ab8500_charger_usbchargernotokr_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ab8500_charger = type { i32, i32, i32 }

@.str = private unnamed_addr constant [34 x i8] c"Not allowed USB charger detected\0A\00", align 1
@IRQ_HANDLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @ab8500_charger_usbchargernotokr_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ab8500_charger_usbchargernotokr_handler(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.ab8500_charger*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.ab8500_charger*
  store %struct.ab8500_charger* %7, %struct.ab8500_charger** %5, align 8
  %8 = load %struct.ab8500_charger*, %struct.ab8500_charger** %5, align 8
  %9 = getelementptr inbounds %struct.ab8500_charger, %struct.ab8500_charger* %8, i32 0, i32 2
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @dev_dbg(i32 %10, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0))
  %12 = load %struct.ab8500_charger*, %struct.ab8500_charger** %5, align 8
  %13 = getelementptr inbounds %struct.ab8500_charger, %struct.ab8500_charger* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.ab8500_charger*, %struct.ab8500_charger** %5, align 8
  %16 = getelementptr inbounds %struct.ab8500_charger, %struct.ab8500_charger* %15, i32 0, i32 0
  %17 = call i32 @queue_delayed_work(i32 %14, i32* %16, i32 0)
  %18 = load i32, i32* @IRQ_HANDLED, align 4
  ret i32 %18
}

declare dso_local i32 @dev_dbg(i32, i8*) #1

declare dso_local i32 @queue_delayed_work(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
